tdf#152959 sw: allow lowercase unicode literal for soft hyphen

Change-Id: If0cd7a07badf9f518ca697beb065e26b48a64abf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145662
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>